# loomv2

./: .env.docker-compose  .env.example  .gitignore  .pre-commit-config.yaml  APPLY_CONSUMER_FIX.md  CLAUDE.md  COMPLETE_DATABASE_SCHEMA_FIX.md  CONSUMER_FIXES.md  CONSUMER_ISSUES_SUMMARY.md  CONSUMER_LAG_FIX_SUMMARY.md  DEPLOYMENT_SUMMARY.md  DOCKER_COMPOSE_COMPLETE.md  ENVIRONMENT_VARIABLES.md  EXECUTE_TWITTER_FIX.md  FETCHER_SETUP_GUIDE.md  FIX_TWITTER_OCR_PROCESSOR.md  KAFKA_CONNECTION_FIX.md  KYUTAI_STT_DATABASE_FIX_COMPLETED.md  Makefile  OS_EVENTS_PIPELINE_ANALYSIS.md  PIPELINE_IMPROVEMENTS_SUMMARY.md  PIPELINE_MONITOR_DB_INTEGRATION.md  README.md  RENAME_TWITTER_TOPIC.md  SPRINT5_STATUS.md  SPRINT6_PLAN.md  SPRINT_1_SUMMARY.md  TOPIC_VALIDATION_REPORT.md  TWITTER_OCR_FIX_COMPLETED.md  Tiltfile  access.md  auto_discovery_sprint.md  deficiencies.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.simple.yml  docker-compose.simple.yml.bak  e2e_test_results.json  findings.md  fix_notifications_final.sql  (+19 more)
clients/macos/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
clients/macos/app/: __init__.py  config.py  main.py
clients/ubuntu/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
clients/ubuntu/app/: api_client.py  config.py  main.py
services/face-emotion/: Dockerfile  pyproject.toml
services/face-emotion/app/: __init__.py  config.py  face_processor.py  kafka_consumer.py  main.py  models.py
services/ingestion-api/: Dockerfile  KAFKA_ROUTING.md  Makefile  README.md  TRACING_IMPLEMENTATION.md  UNIFIED_API.md  pyproject.toml  requirements-locked.txt
services/ingestion-api/app/: __init__.py  auth.py  config.py  database.py  kafka_consumer.py  kafka_producer.py  kafka_topics.py  main.py  models.py  storage.py  tracing.py
services/ingestion-api/docs/: georegions.md
services/ingestion-api/migrations/: 001_enable_timescaledb.sql  002_create_raw_data_tables.sql  003_configure_compression.sql  003_vector_embeddings.sql  004_configure_retention.sql  005_create_processed_data_tables.sql  006_create_external_data_tables.sql  007_create_scheduled_consumer_tables.sql  008_add_text_embeddings_tables.sql  008_create_device_input_tables.sql  009_add_digital_notes_table.sql  009_create_device_network_tables.sql  010_create_device_environment_tables.sql  011_create_device_media_tables.sql  012_create_device_health_additional_tables.sql  013_create_os_event_tables.sql  014_create_digital_data_tables.sql  015_create_analysis_result_tables.sql  016_remove_rss_components.sql  017_configure_hierarchical_retention.sql  018_create_result_tables.sql  019_create_onefilellm_tables.sql  020_create_embedding_tables.sql  021_add_ocr_data_column.sql  022_add_trace_id_columns.sql  023_add_trace_id_simple.sql  023_standardize_trace_id_and_unify_twitter.sql  024_create_android_app_usage_tables.sql  025_create_devices_table.sql  026_add_device_foreign_keys.sql  027_remove_reddit_components.sql  030_create_motion_and_activity_tables.sql  031_create_georegion_tables.sql  032_create_kafka_schema_management.sql  032_insert_initial_georegions.sql  033_add_api_endpoint_mapping.sql  033_add_polygon_georegion_support.sql  034_add_power_sensor_fields.sql  034_adjust_retention_policies.sql  034_enhance_pipeline_views_with_api.sql  (+13 more)
services/ingestion-api/scripts/: check-migrations.sh  georegion-tools.sql  manage-georegions.sql  run-migrations.sh
services/ingestion-api/tests/: __init__.py  conftest.py  test_helpers.py
services/kafka-to-db-consumer/: Dockerfile  OPTIMIZATIONS.md  README.md  pyproject.toml
services/kafka-to-db-consumer/app/: db_mapping_engine.py  generic_consumer.py  main.py  mapping_engine.py
services/kafka-to-db-consumer/config/: topic_mappings.yml
services/kafka-to-db-consumer/tests/: __init__.py  conftest.py  run_tests.sh  test_generic_consumer_smoke.py  test_mapping_engine.py  test_original_consumer_smoke.py  test_smoke.py
services/kyutai-stt/: Dockerfile  Dockerfile.cpu  Makefile  README.md  pyproject.toml  test_kyutai_model.py  test_models.py
services/kyutai-stt/app/: __init__.py  asr_processor.py  config.py  kafka_consumer.py  kyutai_processor.py  kyutai_streaming_processor.py  main.py  models.py  moshi_processor.py  simple_kyutai_processor.py
services/kyutai-stt/deploy/: deployment-cpu.yaml  deployment.yaml  kustomization.yaml
services/kyutai-stt/tests/: __init__.py
services/loom-common/: README.md  pyproject.toml
services/minicpm-vision/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
services/minicpm-vision/app/: __init__.py  config.py  kafka_consumer.py  main.py  models.py  schemas.py  vision_processor.py
services/minicpm-vision/tests/: __init__.py  conftest.py
services/mistral-reasoning/: Dockerfile  pyproject.toml
services/mistral-reasoning/app/: __init__.py  config.py  models.py
services/nomic-embed/: Dockerfile  Makefile  README.md  pyproject.toml
services/nomic-embed/app/: __init__.py  config.py  embedding_processor.py  kafka_consumer.py  kafka_producer.py  main.py  models.py
services/onefilellm/: Dockerfile  README.md  pyproject.toml
services/onefilellm/app/: __init__.py  config.py  database.py  document_processor.py  github_processor.py  kafka_consumer.py  kafka_producer.py  main.py  models.py
services/onnx-vad/: Dockerfile  Makefile  pyproject.toml  setup.py
services/onnx-vad/app/: __init__.py  config.py  kafka_consumer.py  main.py  models.py  onnx_vad_processor.py
services/process-scheduler/: Dockerfile  pyproject.toml
services/process-scheduler/app/: api.py  scheduler.py
services/scheduled-consumers/: Dockerfile  README.md  pyproject.toml  scheduler_config.yaml
services/scheduled-consumers/app/: __init__.py  config.py  kafka_producer.py  main.py  models.py  scheduler.py  topics.py
services/silero-vad/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
services/text-embedder/: Dockerfile  pyproject.toml
services/vad-processor/: Dockerfile  Makefile  pyproject.toml
services/vad-processor-mock/: Dockerfile  pyproject.toml
(+753 files in other folders)
