[project]
name = "loom-common"
version = "0.1.0"
description = "Common utilities and base classes for Loom v2 services"
authors = [
    {name = "Loom Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Kafka
    "aiokafka>=0.10.0",
    "kafka-python>=2.0.2",
    # Core
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    # Utilities
    "python-dateutil>=2.8.0",
    "orjson>=3.9.0",
    # For FastAPI services
    "fastapi>=0.110.0",
    "prometheus-client>=0.19.0",
    "httpx>=0.24.0",
    # Database
    "asyncpg>=0.28.0",
    # Caching
    "cachetools>=5.3.0",
    # System monitoring
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "W", "B", "S", "C90"]
ignore = ["E501", "S101"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive
ignore_missing_imports = true
