[project]
name = "loom-process-scheduler"
version = "0.1.0"
description = "Process scheduler service for Loom v2"
authors = [{ name = "Loom", email = "noreply@loom.dev" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "asyncpg>=0.29.0",
    "croniter>=2.0.0",
    "pydantic>=2.5.0",
    "structlog>=23.2.0",
    "uvloop>=0.19.0; sys_platform != 'win32'",
    "aiokafka>=0.10.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings  
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-v --cov=app --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]