[project]
name = "silero-vad"
version = "0.1.0"
description = "Silero VAD service for Loom v2 - Voice Activity Detection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "aiokafka>=0.12.0",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "structlog>=24.4.0",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "numpy>=2.2.0",
    "httpx>=0.28.1",
    "lz4>=4.3.3",
    "asyncpg>=0.29.0",
    "psutil>=5.9.8",
    "onnxruntime>=1.20.0",
    "loom-common @ file://localhost/app/loom-common",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.3",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "types-pyyaml>=6.0.12.20240917",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
]
