[project]
name = "loom-text-embedder"
version = "0.1.0"
description = "Text embedding service for emails and social media content"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiokafka>=0.10.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.110.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "uvicorn>=0.25.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
