[project]
name = "loom-vad-processor-mock"
version = "0.1.0"
description = "Mock Voice Activity Detection microservice for testing"
requires-python = ">=3.11"
dependencies = [
    "aiokafka>=0.11.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
